2010-12-24  Benjamin Poulain  <ikipou@gmail.com>

        Reviewed by Darin Adler.

        [Qt] [WK2] WebKit 2 does not build on mac, missing reference to RetainPtr
        https://bugs.webkit.org/show_bug.cgi?id=51598

        Fix the build, add the missing header.

        * WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:

2010-12-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        <rdar://problem/8758386> The web process uses its own credential storage
        https://bugs.webkit.org/show_bug.cgi?id=51599

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didReceiveAuthenticationChallenge): Try to answer the challenge using
        the UI process’s credential storage first.
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebKit::WebFrameLoaderClient::shouldUseCredentialStorage): Prevent the web process from using
        its own credential storage.
        * WebProcess/mac/WebProcessMainMac.mm:
        (WebKit::WebProcessMain): Ditto.

2010-12-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Make dragging work again after r74591.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didReceiveEvent): Fixed a typo.

2010-12-23  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Sam Weinig.

        Need WebKit2 API to create a SecurityOrigin from protocol, host, and port
        https://bugs.webkit.org/show_bug.cgi?id=51563

        Add WKSecurityOriginCreate(WKStringRef protocol, WKStringRef host, int port).

        * Shared/API/c/WKSecurityOrigin.cpp:
        (WKSecurityOriginCreateFromIdentifier):
        Renamed so as not to clash with the new WKSecurityOriginCreate.
        (WKSecurityOriginCreate):
        * Shared/API/c/WKSecurityOrigin.h:
        * Shared/WebSecurityOrigin.h:
        (WebKit::WebSecurityOrigin::create):

2010-12-23  Anders Carlsson  <andersca@apple.com>

        Reviewed by Simon Fraser.
